[gd_scene load_steps=2 format=3 uid="uid://db7m3xj5k9wnt"]

[ext_resource type="Script" path="res://engine/stage/Stage2_5D.gd" id="1_stage_2_5d"]

[node name="Stage2_5D" type="Node2D"]
script = ExtResource("1_stage_2_5d")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Mode7Floor" type="Sprite2D" parent="."]
position = Vector2(0, 400)
scale = Vector2(10, 10)

[node name="LightingRig" type="Node2D" parent="."]

[node name="BillboardContainer" type="Node2D" parent="."]

[node name="PostProcessing" type="CanvasLayer" parent="."]
layer = 10